# l2hmc-qcd

./: .gitignore  CITATION.cff  README.md  _quarto.yml  environment.yml  environment_thetaGPU.yml  index.qmd  pyproject.toml  references.bib  setup.py
assets/: l2hmc_poster.jpeg.REMOVED.git-id
doc/: .latexmkrc  autocorrelation_plots.tex  centralmacbib1.bib  centralmacbib2.bib  centralmacbib3.bib  centralmacbib4.bib  clean.py  comments.tex  extra_plots.tex  extras.sty  l2hmc.sty  main.pdf.REMOVED.git-id  main.tex  mh.tex  separate_networks.tex  transformations.tex
doc/appendix/: apndx.tex
doc/autocorrs/: autocorrs.tex
doc/debugging/: debugging.tex
doc/gauge/: gauge.tex
doc/gmm/: gmm.tex
doc/hmc/: hmc.tex  l2hmc.sty  l2hmc_writeup.bib  l2hmc_writeup.pdf.REMOVED.git-id
doc/intro/: introduction.tex
doc/leapfrog/: leapfrog.tex  leapfrog_plots.tex  leapfrog_plots_vimtex_selected.tex
doc/network/: network.tex
doc/training/: training.tex
doc/tunneling_rates/: tunneling_rates.tex
doc/updates/: updates_2019_12_10.tex  updates_2019_12_16.tex  updates_2020_01_01.tex  updates_2020_01_21.tex  updates_2020_02_25.tex  updates_2020_03_16.tex  updates_2020_03_31.tex  updates_2020_04_13.tex  updates_2020_04_28.tex  updates_2020_05_12.tex  updates_2020_07_28.tex  updates_2020_08_07.tex  updates_2020_08_13.tex  updates_2020_09_22.tex  updates_2020_09_23.tex  updates_2020_10_13.tex
docs/: index.html  l2hmc.md  listings.json  robots.txt  search.json  sitemap.xml
docs/css/: callouts.css  default.css  profile.css
docs/qmd/: docs.html  docs.qmd  examples.html  index.html  l2hmc-2DU1-alt.html  l2hmc-2DU1.html  l2hmc-2DU1.qmd  l2hmc-4DSU3.html  l2hmc-4DSU3.qmd  pages.html  pages.qmd  posts.html  posts.qmd  slides.html  slides.qmd  test.qmd
docs/reports/: l2hmc-2DU1.md
l2hmc-qcd/: README.md  config.py  gauge_inference.py  gauge_inference_np.py  gauge_model.py  gauge_model_args.txt  gauge_model_args_hmc.txt  gauge_model_inference.py  gauge_model_main.py  gauge_model_train.py  globals.py  gmm_inference.py  gmm_main.py  hmc.py  hmc1.py  inference.py  l2hmc_function_test.py  main.py  main_eager.py  mnist_test.py  mog_model.py  np_inference_script.py  plot_script.py  run.py  run_hmc_np.py  seed_dict.py  test.py  train.py  train_eager.py  update.py  variables.py
l2hmc-qcd/HMC/: hmc.py  tfp_hmc.py
l2hmc-qcd/args/: args.txt  cooley_np.sh  gauge.sh  gauge_args.txt  gauge_args1.txt  gauge_args_eager.txt  gauge_inference.sh  gauge_inference_args.txt  gauge_model_args.txt  gauge_model_args_hmc.txt  gauge_model_args_hvd.txt  gmm.sh  gmm_args.txt  gmm_inference_args.txt  hmc.sh  hmc.txt  hmc_args.txt  l2hmc.sh  l2hmc.txt  np.sh  np.txt  tf.sh  tf.txt  tf_inference.sh  train.sh  train_eager.sh
l2hmc-qcd/base/: base_model.py
l2hmc-qcd/dynamics/: __init__.py  base_dynamics.py  config.py  dynamics.py  dynamics_base.py  dynamics_np.py  gauge_dynamics.py  generic_dynamics.py  nnehmc_dynamics.py
l2hmc-qcd/eager/: file_io.py  inference_utils.py  plotting.py  training_utils.py
l2hmc-qcd/inference/: gauge_inference_utils.py  gmm_inference_utils.py  utils.py
l2hmc-qcd/inference_scripts/: inference.sh  inference2.sh  inference_run.py
l2hmc-qcd/lattice/: gauge.py  gauge_lattice.py  ising_lattice.py  lattice.py  lattice_old.py  matrices.py  observables.py  utils.py
l2hmc-qcd/loggers/: gauge_model_logger.py  gauge_model_runner_logger.py  inference_summarizer.py  run_logger.py  summary_utils.py  train_logger.py
l2hmc-qcd/models/: gauge_model.py  gauge_model_eager.py  gauge_model_new.py  gmm_model.py  model.py  mog_model.py  params.py
l2hmc-qcd/network/: __init__.py  activation_functions.py  cartesian_net.py  config.py  conv_net.py  conv_net2d.py  conv_net3d.py  encoder_net.py  functional_net.py  gauge_conv_network.py  gauge_network.py  gauge_network_new.py  generic_net.py  generic_net_np.py  generic_network.py  layers.py  network.py  network_utils.py
l2hmc-qcd/notebooks/: MOGExperiment.ipynb  SCGExperiment.ipynb  Untitled11.ipynb  Untitled7.ipynb  animation.ipynb  autocorr_stats1.ipynb  autocorr_stats1.ipynb.REMOVED.git-id  autocorr_stats2.ipynb  autocorr_stats2.ipynb.REMOVED.git-id  complete_example_2021_01_26.ipynb  complete_example_2021_01_26.ipynb.REMOVED.git-id  gauge_model_2019_09_06.ipynb  gauge_model_graph_mode.ipynb  gauge_model_graph_plots.ipynb  jointplots_2019_12_19_1.ipynb  (+27 more)
qmd/: docs.qmd  l2hmc-2DU1.ipynb  l2hmc-2DU1.qmd  l2hmc-4DSU3.qmd  posts.qmd  slides.qmd
reports/: l2hmc-2dU1.md
(+285 files in other folders)
