[tool.poetry]
name = "l2hmc"
version = "0.2.0"
description = "L2HMC algorithm for sampling in Lattice QCD"
authors = ["Sam Foreman <saforem2@gmail.com>"]
exclude = ["src/l2hmc/outputs/", "src/l2hmc/wandb/", "**/old/**/*", "**/outputs/**/*", "**/__pycache__/**/*", "**/.DS_Store/**/*"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotx = "^0.3.6"
ipython = "^8.1.0"
accelerate = "^0.5.1"
pyright = "^1.1.226"
neovim = "^0.3.1"
tensorflow = "^2.8.0"
torch = "^1.11.0"
horovod = "^0.24.2"

[tool.poetry.dev-dependencies]
numpy = ">=1.20"
torch = ">=1.10.2"
tensorflow-cpu = ">=2.8.0"
joblib = ">=1.1.0"
rich = ">=11.2.0"
hydra-core = ">=1.1.1"
hydra-colorlog = ">=1.1.0"
wandb = ">=0.12.11"
seaborn = ">=0.11.2"
matplotlib = ">=3.5.1"
arviz = ">=0.11.4"
xarray = ">=2022.3.0"
celerite = ">=0.4.2"
pyright = ">=1.1.225"
itermplot = {version = "^0.331", optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
