[tool.poetry]
name = "l2hmc"
version = "0.3.0"
description = "L2HMC algorithm for sampling in Lattice QCD"
authors = ["Sam Foreman <saforem2@gmail.com>"]
packages = [{include = "l2hmc", from = "src"}]
exclude = ["src/l2hmc/outputs/", "src/l2hmc/wandb/", "**/old/**/*", "**/outputs/**/*", "**/__pycache__/**/*", "**/.DS_Store/**/*"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
torch = "^1.11.0"
tensorflow = "^2.8.0"
bokeh = "^2.4.2"
mpi4py = "^3.1.3"
nodejs = "^0.1.1"
h5py = "^3.6.0"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
xarray = "^2022.3.0"
joblib = "^1.1.0"
celerite = "^0.4.2"
horovod = "^0.24.2"
pynvim = {version = "^0.4.3", optional = true}
neovim = {version = "^0.3.1", optional = true}
pyright = {version = "^1.1.235", optional = true}
ipython = "^8.2.0"
rich = "^12.1.0"
hydra-core = "^1.1.1"
wandb = "^0.12.11"
arviz = "^0.12.0"
hydra-colorlog = "^1.1.0"
matplotx = "^0.3.6"
accelerate = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
