[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l2hmc"
description = 'Framework for training MCMC samplers for Lattice QCD'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Sam Foreman", email = "saforem2@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "bokeh",
  "mpi4py",
  "nodejs",
  "h5py",
  "seaborn",
  "xarray",
  "joblib",
  "celerite",
  "pynvim",
  "neovim",
  "pyright",
  "ipython",
  "rich",
  "hydra-core",
  "wandb",
  "arviz",
  "hydra-colorlog",
  "matplotx",
  "accelerate",
  "tqdm",
  "ptipython",
  "tensorflow",
  "torch",
  "horovod[pytorch,tensorflow]"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/saforem2/l2hmc-qcd"
Issues = "https://github.com/saforem2/l2hmc-qcd/issues"
Source = "https://github.com/saforem2/l2hmc-qcd"

[tool.hatch.version]
path = "src/l2hmc/__about__.py"

[tool.hatch.build]
exclude = [
  "src/l2hmc/outputs/",
  "**old**",
]

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
packages = ["src/l2hmc"]

[tool.hatch.envs.l2hmc]
python = "3.10"
dependencies = [
  "bokeh",
  "mpi4py",
  "nodejs",
  "h5py",
  "seaborn",
  "xarray",
  "joblib",
  "celerite",
  "pynvim",
  "neovim",
  "pyright",
  "ipython",
  "rich",
  "hydra-core",
  "wandb",
  "arviz",
  "hydra-colorlog",
  "matplotx",
  "accelerate",
  "tqdm",
  "ptipython",
  "tensorflow",
  "pytorch",
  "horovod"
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/l2hmc --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "l2hmc/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
